Don't use squarespace only LESS stuff for this template (since can't be loaded locally).

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,8 +1,24 @@
- 
+
 
 /* BEDFORD BASE STYLES */
 
 /* Generic variables */
+@banner-heading-font-font-size: 32px;
+@banner-heading-font-letter-spacing: 0.1em;
+
+@banner-text-font-font-size: 16px;
+@banner-text-font-letter-spacing: 0.1em;
+
+@heading1-font-font-size: 24px;
+@heading1-font-letter-spacing: 0.2em;
+
+@heading2-font-font-size: 18px;
+@heading2-font-letter-spacing: 0.2em;
+
+@heading3-font-font-size: 16px;
+@heading3-font-letter-spacing: 0.2em;
+
+@nav-font-font-size: 16px;
 @sitePadding: 32px;
 @mobilePadding: 20px;
 @headerVertPadding: 20px;
@@ -1770,7 +1786,7 @@ body:not(.collection-type-gallery).banner-button-corner-style-pill {
 
   .like-count {
     margin-right: 1.2em;
-    .sqs-ui-font(heart-2);
+    //.sqs-ui-font(heart-2);
     // link color
 
     &:hover {
@@ -1800,7 +1816,7 @@ body:not(.collection-type-gallery).banner-button-corner-style-pill {
 
 .ss-social-button {
 
-  .sqs-ui-font(share);
+  //.sqs-ui-font(share);
   // link color
 
   &:hover {
@@ -1983,4 +1999,3 @@ html.touch {
     text-decoration: none !important;
   }
 }
-
