--- a/styles/blog.less
+++ b/styles/blog.less
@@ -1,7 +1,7 @@
 /* BEDFORD BLOG STYLES */
 
 // Import system ui font
-@import 'sqs-ui-font';
+// @import 'sqs-ui-font';
 
 
 // Blog collection
@@ -10,7 +10,7 @@
 
   // Collection wide
 
-} 
+}
 
 
 // Blog Sidebar
@@ -147,7 +147,7 @@
   .sqs-disqus-comment-link {
     display: inline-block;
     margin-right: 1em;
-    .sqs-ui-font(bubble);
+    //.sqs-ui-font(bubble);
     text-decoration: none;
 
     &:before {
@@ -401,13 +401,13 @@
 .sqs-featured-posts-gallery {
   .arrow {
     &.previous-slide {
-      .sqs-ui-font(left);
-      .sqs-ui-font-size(24px, 24px);
+      //.sqs-ui-font(left);
+      //.sqs-ui-font-size(24px, 24px);
     }
 
     &.next-slide {
-      .sqs-ui-font(right);
-      .sqs-ui-font-size(24px, 24px);
+      //.sqs-ui-font(right);
+      //.sqs-ui-font-size(24px, 24px);
     }
   }
 }
@@ -654,6 +654,3 @@
 //     }
 //   }
 // }
-
-
-
