--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -244,7 +244,7 @@
 @media only screen and (max-width: 640px) {
 
 	// collapse sqs layouts
-  @import 'sqs-grid-breaker';
+  //@import 'sqs-grid-breaker';
 
   #page {
   	padding: (@mobilePadding * 2) @mobilePadding;
@@ -770,5 +770,3 @@
 		}
 	}
 }
-
-
